# openplatform-kubewarden-policies

./: .gitignore  .golangci.yml  Makefile.golang  Makefile.rust  Makefile.tinygo  artifacthub-repo.yml
.github/: dependabot.yml  pull_request_template.md  release-drafter-harvester-pci-devices.yml  release-drafter-harvester-restricted-network-vm.yml  release-drafter-harvester-restricted-network.yml  release-drafter-istio-gateway-virtualservice.yml  release-drafter-istio-gateway.yml  release-drafter-pod-mig-partitions.yml  release-drafter-rke2-mig-partitions.yml  release-drafter.yml
.github/actions/calculate-policy-matrix/: action.yaml
.github/workflows/: auto-labeler.yaml  ci.yaml  release-tag.yaml  release.yaml  reusable-auto-labeler.yaml  reusable-ci.yaml  trigger-policy-release.yaml
policies/harvester-pci-devices/: .gitignore  README.md  e2e.bats  go.mod  go.sum  metadata.yml  settings.sample.json
policies/harvester-restricted-network/: .gitignore  README.md  go.mod  go.sum  metadata.yml  settings.sample.json
policies/harvester-restricted-network-vm/: Makefile  README.md  go.mod  go.sum  metadata.yml  settings.sample.json
policies/istio-gateway/: Cargo.toml  Makefile  README.md  e2e.bats  metadata.yml
policies/istio-gateway/src/: lib.rs  settings.rs
policies/istio-gateway/test_data/: settings.json  settings2.json  vs-01.json  vs-02.json  vs-03.json  vs-04.json  vs-05.json  vs-06.json
policies/pod-mig-partitions/: .gitignore  Makefile  README.md  go.mod  metadata.yml
policies/rke2-mig-partitions/: README.md  e2e.bats  go.mod  go.sum  metadata.yml
(+63 files in other folders)
