[package]
name = "istio-gateway"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
k8s-openapi = { version = "0.26.0", default-features = false, features = [
  "v1_31",
] }
kcr_networking_istio_io = "2.20251019.30658"
kubewarden-policy-sdk = "0.15"
lazy_static = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slog = "2.7"
thiserror = "2.0.17"
